# Money

./: .gitignore  README-zh-tw.md  README.md  main.py  manage.py  openai_agents.py  pyproject.toml  requirements.txt  trading_agents.py
Moneytest/: asgi.py  settings.py  urls.py  views.py  wsgi.py
api/: config.py  serializers.py  urls.py  views.py
api/services/: base.py  newsapi.py  yfinance.py
companies/: admin.py  models.py  urls.py  views.py
companies/management/commands/: fetch_data.py  seed_companies.py
companies/migrations/: 0001_initial.py  0002_stockdata.py
data/: AAPL_stock_data_20241028_to_20250426.csv  TSLA_stock_data_20241028_to_20250426.csv
news/: admin.py  models.py
news/migrations/: 0001_initial.py
predictions/: admin.py  models.py
predictions/migrations/: 0001_initial.py
templates/: home.html  predictions.html  stocks.html
trading_agents/: __init__.py  agents.py  test_agents.py
