[project]
name = "money"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=4.2.0",
    "djangorestframework>=3.14.0",
    "gunicorn>=20.1.0",
    "numpy>=1.24.0",
    "openai>=1.76.0",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.6",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "yfinance>=0.2.18",
]
